style/page.styl
h1, h2, h3, h4, h5, h6, #title
  font-family: LatoRegular, $baseFontFamily
  font-weight: normal

header
  margin: 30px 0
  padding-bottom: 15px
  border-bottom: 1px solid $grayLighter;

footer
  padding-top: 15px
  border-top: 1px solid $grayLighter;

#title
  font-size: $baseFontSize * 4
  text-transform: uppercase
  letter-spacing: 2px
  a
    color: $grayDarker

#contact
  ul
    list-style: none
    li a
      margin-left: 5px
      font-size: $baseFontSize + 3
    font-size: $baseFontSize + 7
  margin-right: 20px

#projects
  list-style-type: none
  margin: 12px 0 4px
  padding: 0

#projects a
  color: inherit

#projects .project
  background-color: $grayLighter
  margin-bottom: 20px
  min-height: 305px
  $box-shadow(1px 1px 1px rgba(0,0,0,.2))
  text-align: center

#projects .project:hover
  background-color: darken($grayLighter, 4%)

#projects .project img
  max-width: 240px
  max-height: 158px
  padding: 20px 20px 0

#projects .project .title
  font-weight: bold
  color: $gray
  padding: 20px 20px 0

#projects .project .abstract
  padding: 0 20px 20px

#projects p
  text-align: left

#project-thumb
  height: 168px

.screenshot
  border: 1px solid $grayLighter
  padding: 2px
  margin-top: 10px
  img
    margin-bottom: -6px

code
  color: inherit

blockquote
  p
    $font-shorthand($baseFontSize,normal,$baseLineHeight)
    font-style: italic
  small
    text-align: right

#subtitle
  margin-left: 0

ul#tags
  list-style: none
  margin: 0 22px 0 0
  padding: 0
  text-align: right
  li
    margin-left: 5px
    display: inline

